first-blog-post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,21 +3,26 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
+    <h2 class="footer-heading">{{ site.doing | escape }}</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
+            <!--{%- if site.status1 -%}-->
+              {{ site.status1 | escape }}
+            <!--{%- else -%}
               {{ site.title | escape }}
-            {%- endif -%}
+            {%- endif -%}-->
             </li>
-            {%- if site.email -%}
+
+            <li>{{ site.status2 | escape }}</li>
+
+            <li>{{ site.status3 | escape }}</li>
+
+            <!--{%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+            {%- endif -%}-->
         </ul>
       </div>
 
