--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -176,11 +176,13 @@ pre {
  */
 .wrapper {
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  /*max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));*/
   margin-right: auto;
   margin-left: auto;
-  padding-right: $spacing-unit;
-  padding-left: $spacing-unit;
+  /*padding-right: $spacing-unit;
+  padding-left: $spacing-unit;*/
+  padding-right: 20%;
+  padding-left: 20%;
   @extend %clearfix;
 
   @include media-query($on-laptop) {
