--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,9 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">
+            <li>ambitiously</li>
+          <!--<li class="p-name">-->
+            <li>
             <!--{%- if site.status1 -%}-->
               {{ site.status1 | escape }}
             <!--{%- else -%}
@@ -16,8 +18,10 @@
             {%- endif -%}-->
             </li>
 
+            <li>passionately</li>
             <li>{{ site.status2 | escape }}</li>
 
+            <li>slowly</li>
             <li>{{ site.status3 | escape }}</li>
 
             <!--{%- if site.email -%}
