--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,9 @@
             <li>slowly</li>
             <li>{{ site.status3 | escape }}</li>
 
+            <li>while</li>
+            <li>{{ site.status4 | escape }}</li>
+
             <!--{%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}-->
