--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,6 +39,7 @@
 
       <div class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
+        <p>Feel free to hit me up @ fang.j.sra@gmail.com</p>
       </div>
     </div>
 
