super-hero-to-the-rescue

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
           <a class="page-link" href="/about/">About</a>
           <a class="page-link" href="/lifestyle/">Lifestyle</a>
           <a class="page-link" href="/ponderings/">Ponderings</a>
-          <a class="page-link" href="/adventure/">Adventure</a>
+          <a class="page-link" href="/adventures/">Adventures</a>
         </div>
       </nav>
     {%- endif -%}
