--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -182,8 +182,8 @@ pre {
   /*padding-right: $spacing-unit;
   padding-left: $spacing-unit;*/
   /*padding below comment in an attempt to fix boxes*/
-  /*padding-right: 20%;
-  padding-left: 20%;*/
+  padding-right: 1%;
+  padding-left: 1%;
   @extend %clearfix;
 
   @include media-query($on-laptop) {
