--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-            <li>ambitiously</li>
+            <li>positively</li>
           <!--<li class="p-name">-->
             <li>
             <!--{%- if site.status1 -%}-->
@@ -18,14 +18,16 @@
             {%- endif -%}-->
             </li>
 
-            <li>passionately</li>
+            <li>ambitiously</li>
             <li>{{ site.status2 | escape }}</li>
 
-            <li>slowly</li>
+            <li>and</li>
             <li>{{ site.status3 | escape }}</li>
 
+            <!--
             <li>while</li>
             <li>{{ site.status4 | escape }}</li>
+            -->
 
             <!--{%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
